[gd_scene load_steps=17 format=2]

[ext_resource path="res://Source/Menu/HMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/no_virus/No Virus.ttf" type="FontFile" id=2]
[ext_resource path="res://Assets/Graphics/Textures/old_paper.png" type="Texture2D" id=3]
[ext_resource path="res://Source/Gameplay/HUD/AttackingMenu.gd" type="Script" id=5]
[ext_resource path="res://Source/Button/Button.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 800, 500 )
modulate_color = Color( 0.517647, 0.517647, 0.517647, 1 )

[sub_resource type="FontFile" id=2]
size = 36
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )
LineEdit/colors/clear_button_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0.94, 0.94, 0.94, 1 )
LineEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.88, 0.88, 0.88, 0.5 )
LineEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = SubResource( 1 )
LineEdit/styles/normal = SubResource( 1 )
LineEdit/styles/read_only = SubResource( 1 )

[sub_resource type="FontFile" id=4]
size = 28
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=5]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=12]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.137255, 0.137255, 0.137255, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.137255, 0.137255, 0.137255, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="AttackingMenu" type="TextureRect"]
self_modulate = Color( 1, 1, 1, 0.941176 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -346.5
offset_top = -214.0
offset_right = 346.5
offset_bottom = 214.0
theme = SubResource( 3 )
texture = ExtResource( 3 )
expand = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2( 260, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginTop" type="ColorRect" parent="Info"]
offset_right = 693.0
offset_bottom = 5.0
custom_minimum_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="Players" type="HBoxContainer" parent="Info"]
offset_top = 9.0
offset_right = 693.0
offset_bottom = 188.0

[node name="LeftMargin" type="Label" parent="Info/Players"]
offset_top = 71.0
offset_right = 10.0
offset_bottom = 108.0
custom_minimum_size = Vector2( 10, 0 )

[node name="Player" type="VBoxContainer" parent="Info/Players"]
offset_left = 14.0
offset_right = 286.0
offset_bottom = 179.0
custom_minimum_size = Vector2( 272, 179 )
size_flags_horizontal = 3

[node name="IconBorder" type="ColorRect" parent="Info/Players/Player"]
offset_left = 96.0
offset_right = 176.0
offset_bottom = 80.0
custom_minimum_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0, 0, 0, 1 )

[node name="Icon" type="ColorRect" parent="Info/Players/Player/IconBorder"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Info/Players/Player"]
offset_top = 84.0
offset_right = 272.0
offset_bottom = 113.0
theme_override_fonts/font = SubResource( 4 )
text = "Player 1"
align = 1
valign = 1

[node name="Country" type="Label" parent="Info/Players/Player"]
offset_top = 117.0
offset_right = 272.0
offset_bottom = 146.0
theme_override_fonts/font = SubResource( 4 )
text = "Eastern United States"
align = 1
valign = 1

[node name="Troops" type="Label" parent="Info/Players/Player"]
offset_top = 150.0
offset_right = 272.0
offset_bottom = 179.0
theme_override_fonts/font = SubResource( 4 )
text = "6 Troops"
align = 1
valign = 1

[node name="Vs" type="Label" parent="Info/Players"]
offset_left = 290.0
offset_top = 71.0
offset_right = 403.0
offset_bottom = 108.0
size_flags_horizontal = 3
text = "VS"
align = 1
valign = 1

[node name="Opponent" type="VBoxContainer" parent="Info/Players"]
offset_left = 407.0
offset_right = 679.0
offset_bottom = 179.0
custom_minimum_size = Vector2( 272, 179 )
size_flags_horizontal = 3

[node name="IconBorder" type="ColorRect" parent="Info/Players/Opponent"]
offset_left = 96.0
offset_right = 176.0
offset_bottom = 80.0
custom_minimum_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0, 0, 0, 1 )

[node name="Icon" type="ColorRect" parent="Info/Players/Opponent/IconBorder"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Info/Players/Opponent"]
offset_top = 84.0
offset_right = 272.0
offset_bottom = 113.0
theme_override_fonts/font = SubResource( 4 )
text = "Player 3"
align = 1
valign = 1

[node name="Country" type="Label" parent="Info/Players/Opponent"]
offset_top = 117.0
offset_right = 272.0
offset_bottom = 146.0
theme_override_fonts/font = SubResource( 4 )
text = "Western United States"
align = 1
valign = 1

[node name="Troops" type="Label" parent="Info/Players/Opponent"]
offset_top = 150.0
offset_right = 272.0
offset_bottom = 179.0
theme_override_fonts/font = SubResource( 4 )
text = "4 Troops"
align = 1
valign = 1

[node name="RightMargin" type="Label" parent="Info/Players"]
offset_left = 683.0
offset_top = 71.0
offset_right = 693.0
offset_bottom = 108.0
custom_minimum_size = Vector2( 10, 0 )

[node name="MarginMid1" type="ColorRect" parent="Info"]
offset_top = 192.0
offset_right = 693.0
offset_bottom = 197.0
custom_minimum_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Info"]
offset_top = 201.0
offset_right = 693.0
offset_bottom = 234.0
size_flags_horizontal = 3
theme_override_fonts/font = SubResource( 5 )
text = "Attacking with"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginMid2" type="ColorRect" parent="Info"]
offset_top = 238.0
offset_right = 693.0
offset_bottom = 243.0
custom_minimum_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="TroopsRange" type="SpinBox" parent="Info"]
offset_top = 247.0
offset_right = 693.0
offset_bottom = 296.0
custom_minimum_size = Vector2( 0, 49 )
min_value = 1.0
value = 1.0
align = 1
suffix = "troops"

[node name="MarginMid3" type="ColorRect" parent="Info"]
offset_top = 300.0
offset_right = 693.0
offset_bottom = 305.0
custom_minimum_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="MarginMid4" type="ColorRect" parent="Info"]
offset_top = 309.0
offset_right = 693.0
offset_bottom = 314.0
custom_minimum_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="HMenu" parent="Info" instance=ExtResource( 1 )]
offset_top = 318.0
offset_right = 693.0
offset_bottom = 419.0
size_flags_vertical = 3

[node name="MarginLeft" type="Label" parent="Info/HMenu"]
offset_top = 32.0
offset_bottom = 69.0

[node name="Cancel" parent="Info/HMenu" instance=ExtResource( 6 )]
offset_left = 20.0
offset_right = 326.0
offset_bottom = 101.0
theme_override_fonts/font = SubResource( 12 )
theme_override_styles/hover = SubResource( 7 )
theme_override_styles/pressed = SubResource( 8 )
theme_override_styles/focus = SubResource( 9 )
theme_override_styles/disabled = SubResource( 10 )
theme_override_styles/normal = SubResource( 11 )
text = "Cancel"
flat = true

[node name="MarginMid" type="Label" parent="Info/HMenu"]
offset_left = 346.0
offset_top = 32.0
offset_right = 346.0
offset_bottom = 69.0

[node name="Attack" parent="Info/HMenu" instance=ExtResource( 6 )]
offset_left = 366.0
offset_right = 673.0
offset_bottom = 101.0
theme_override_fonts/font = SubResource( 12 )
theme_override_styles/hover = SubResource( 7 )
theme_override_styles/pressed = SubResource( 8 )
theme_override_styles/focus = SubResource( 9 )
theme_override_styles/disabled = SubResource( 10 )
theme_override_styles/normal = SubResource( 11 )
text = "Attack"
flat = true

[node name="MarginRight" type="Label" parent="Info/HMenu"]
offset_left = 693.0
offset_top = 32.0
offset_right = 693.0
offset_bottom = 69.0

[node name="MarginBottom" type="ColorRect" parent="Info"]
offset_top = 423.0
offset_right = 693.0
offset_bottom = 428.0
custom_minimum_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[connection signal="value_changed" from="Info/TroopsRange" to="." method="value_changed"]
[connection signal="pressed" from="Info/HMenu/Cancel" to="." method="cancel"]
[connection signal="pressed" from="Info/HMenu/Attack" to="." method="attack"]
